--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,9 +129,8 @@
   <ul class='item-lists'>
     <% if @items.present? %>
       <% @items.each do |item| %>
-        <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
         <li class='list'>
-          <%= link_to item_path(item) do %>
+          <%#= link_to item_path(item) do %>
             <div class='item-img-content'>
               <%= image_tag item.item_image, class: "item-img" %>
               <%# 商品が売れていればsold outを表示しましょう %>
