--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,7 +28,7 @@
     <% elsif user_signed_in? && @item.user == current_user %>
       <%= link_to '商品の編集', edit_item_path(@item), method: :get, data: {turbo: false}, class: "item-red-btn" %>
       <p class="or-text">or</p>
-      <%= link_to "削除", "#", method: :delete, class: "item-destroy" %>
+      <%= link_to '削除', item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
