--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,9 +134,11 @@
             <div class='item-img-content'>
               <%= image_tag item.item_image, class: "item-img" %>
               <%# 商品が売れていればsold outを表示しましょう %>
+              <% if item.purchase != nil %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
+              <% end %>
               <%# //商品が売れていればsold outを表示しましょう %>
             </div>
             <div class='item-info'>
