--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,9 +9,11 @@
     <div class="item-img-content">
       <%= image_tag @item.item_image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @item.purchase != nil %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -23,13 +25,15 @@
       </span>
     </div>
 
-    <% if user_signed_in? && @item.user != current_user %>
-      <%= link_to "購入画面に進む", "#", class: "item-red-btn" %>
-    <% elsif user_signed_in? && @item.user == current_user %>
+    <% if user_signed_in? && @item.purchase.nil? %>
+      <% if @item.user != current_user %>
+      <%= link_to "購入画面に進む", item_purchases_path(@item), method: :get, data: {turbo: false}, class: "item-red-btn" %>
+    <% else %>
       <%= link_to '商品の編集', edit_item_path(@item), method: :get, data: {turbo: false}, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to '削除', item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
     <% end %>
+  <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
     <div class="item-explain-box">
